--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
       <div>
         <h1>Hello, <span></span></h1>
         <h1>I'm <span></span></h1>
-        <h1>Ad Dev<span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
+        <h1>AD Dev<span></span></h1>
       </div>
     </div>
   </section>
@@ -95,7 +94,7 @@
           <div class="project-info">
             <h1>Project 1</h1>
             <h2>My Portfolio Website 1</h2>
-            <p>It is a website that contains my identity, projects, services,job positions I am interested in, and contact info.  </p>
+            <p>It is a website that I built using HTML, CSS, and JavaScript.  </p>
           </div>
           <div class="project-img">
             <img src="./img/project1.png" alt="img">
@@ -105,7 +104,7 @@
           <div class="project-info">
             <h1>Project 2</h1>
             <h2>A Coffee Shop Website</h2>
-            <p>It is website similar to real-life coffee shops websites. It contains lists of coffee products, blogs, reviews, and contact info.</p>
+            <p>It is website similar to real-life coffee shops websites. It is a website that I built using HTML, CSS, and JavaScript.</p>
           </div>
           <div class="project-img">
             <img src="./img/project2.png" alt="img">
@@ -115,7 +114,7 @@
           <div class="project-info">
             <h1>Project 3</h1>
             <h2>My Portfolio Website 2</h2>
-            <p>It is a website that contains my background in Information Technology, courses I have had, projects I have completed, and Contact info.</p>
+            <p>It is a website that I built using HTML, CSS, and JavaScript.</p>
           </div>
           <div class="project-img">
             <img src="./img/project3.png" alt="img">
